# TOBB-GPT

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  packages.txt  pyproject.toml  requirements - dev.txt  requirements.txt  start.bat
app/: app.py
sigma_chatbot/: app.py
sigma_chatbot/chroma_db_openai/index/: index_metadata_3fa16a14-9dcd-4c97-83c2-7cc8c4fc5275.pkl
sigma_chatbot/modules/: configurations.py  utils.py
src/chatbot/: app.py  requirements.txt
src/chatbot/.history/: app_20230317123524.py  app_20230317123853.py  app_20230317123903.py  app_20230317123911.py  app_20230317123921.py  app_20230317123944.py  app_20230317123956.py  app_20230317124018.py
src/sigma_chatbot/: app.py
static/: Links.xlsx  style.css
style/: style.css
tobb_gpt/: app.py
tobb_gpt/chroma_db_openai/: chroma-collections.parquet
tobb_gpt/chroma_db_openai/index/: id_to_uuid_3fa16a14-9dcd-4c97-83c2-7cc8c4fc5275.pkl  id_to_uuid_85d58480-cbb1-46d7-ac52-3f96b6dbe181.pkl  index_metadata_85d58480-cbb1-46d7-ac52-3f96b6dbe181.pkl  uuid_to_id_3fa16a14-9dcd-4c97-83c2-7cc8c4fc5275.pkl  uuid_to_id_85d58480-cbb1-46d7-ac52-3f96b6dbe181.pkl
tobb_gpt/modules/: scraping.ts  utils.py
