[tool.poetry]
name = "sigma-chat-bot"
version = "0.1.1"
description = "It is a chatbot powered by OpenAI, Langchain, ChromeDB, and Azure APIs to educate students about specific colleges."
authors = ["olympian-21 <ataturhan21@gmail.com>", "hpekkan huseyinpekkan1163@gmail.com"]
license = "GPL-3.0"
keywords = ["chatbot", "openai", "college", "sigma", "langchain"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
audio-recorder-streamlit = "^0.0.8"
azure-cognitiveservices-speech = "^1.26.0"
openai = "^0.27.2"
requests = "^2.28.2"
streamlit = "^1.20.0"
streamlit-chat = "^0.0.2.2"
chromadb = "^0.3.25"
langchain = "^0.0.186"
google-api-python-client = "^2.89.0"
unstructured = "^0.7.5"
bs4 = "^0.0.1"
tiktoken = "^0.4.0"
google-auth-oauthlib = "^1.0.0"
speechrecognition = "^3.10.0"
gtts = "^2.3.2"
pyaudio = "^0.2.13"
huggingface-hub = "^0.16.4"
sentence-transformers = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
